# db_manager

./: main.py  pyproject.toml
utils/: ddl_functions.py  dml_functions.py  general_db_functions.py  general_functions.py
utils/configs/: general_configs.py
utils/functions/general_functions/: general_functions.py
utils/functions/mysql_functions/: ddl_functions.py
utils/functions/mysql_functions/queries/: create_table.sql  drop_database.sql  drop_table.sql
utils/queries/: describe_table.sql  insert_registers.sql  truncate_table.sql
